# RNVS

./: .gitignore  README.md
Block2/: CMakeLists.txt  client  client.c  qotd.txt  server  server.c
Block2/testresults/: results.csv
Block2/testresults/Block2/: .test.log.swp
Block3/: CMakeLists.txt  client  client.c  communication.h  server  server.c  uthash.h
Block3/Abgabe/: CMakeLists.txt  communication.h  server.c
Block3/Block2_muster/: client.c  server.c
Block4/: CMakeLists.txt  client.c  client_request.h  communication.h  lookup.h  peer.c  peer.h  text.txt  uthash.h
Block5/: CMakeLists.txt  communication.c  communication.h  ntpcalculations.c  ntpcalculations.h  ntpclient.c  ntplogic.c  ntplogic.h
Block5Spende/: CMakeLists.txt  aufgabe6.aux  aufgabe6.tex  main.c
Block5Spende/plot/: data.csv  plot.py
HA_1/: server.c
